--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
   "python.testing.autoTestDiscoverOnSaveEnabled": true,
   "python.terminal.activateEnvInCurrentTerminal": true,
   "[python]": {
-    "editor.defaultFormatter": "ms-python.black-formatter"
+    "editor.defaultFormatter": "charliermarsh.ruff"
   },
   "ruff.enable": true,
   "mypy-type-checker.preferDaemon": false,
