upload snapshot reports

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,10 +11,11 @@ on:
 jobs:
   Test:
     name: Test
+
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
     steps:
       - uses: actions/checkout@v4
       - name: Setup PDM
@@ -26,3 +27,8 @@ jobs:
         run: pdm install --frozen-lock
       - name: Run tests
         run: pdm test
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: snapshot_report
+          path: snapshot_report.html
