--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,5 @@
+exclude: .+\.ambr
+
 repos:
   - repo: https://github.com/asottile/pyupgrade
     rev: v3.15.1
@@ -55,3 +57,4 @@ repos:
           - "types-jmespath"
           - "textual"
           - "trove-classifiers"
+          - "nox"
